# WILDkCAT

./: .dockerignore  .gitignore  404.html  README.md  example.py  gitignore.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md  installation.md  reference.md  troubleshooting.md
explanation/: index.html
in_progress/: test.tsv  test_27111.tsv
installation/: index.html
non_functional_approaches/: tempCodeRunnerFile.py
output/: Human-GEM_kcat.tsv  Human-GEM_kcat.xlsx  Human-GEM_kcat_Chebi.tsv  Human-GEM_kcat_Chebi_cleaned.tsv  Human-GEM_kcat_cleaned.tsv  Human-GEM_kcat_kegg.tsv  Human-GEM_kcat_kegg_cleaned.tsv  ec_codes.csv  ecoli_kcat.tsv  ecoli_kcat_brenda.tsv  ecoli_kcat_full.tsv  ecoli_kcat_sabio.tsv  ecoli_kcat_test_brenda.tsv  kcat.tsv  kcat_full.tsv  kcat_reaction_info.csv  kcat_retrieved.tsv  yeast_kcat.tsv  yeast_kcat_brenda.tsv  yeast_kcat_full.tsv  yeast_kcat_test_brenda.tsv
reference/: index.html
reports/: brenda_report.html  catapro_part1.html  extract_kcat_report.html  general_report.html  kcat_report.html  kcat_summary.html  prediction_kcat_report.html  retrieve_kcat_report.html  sabio_rk_report.html
scripts/: run.py  run_wildkcat.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
src/: brenda_api.py  data_io.py  data_pro.ipynb  data_processing.py  enzyme_representations.py  extract_kcat.py  extract_kcat_from_model.py  format_data.py  helpers.py  kcat_pred.py  model_extraction.py  retrieve_data.py  retrieve_kcat.py  run_pred.py  sabio_rk_api.py
troubleshooting/: index.html
tutorials/: index.html
(+125 files in other folders)
